added todo 2 component

--- a/src/app/extrapages/chart01/chart01.component.html
+++ b/src/app/extrapages/chart01/chart01.component.html
@@ -1,71 +1,110 @@
-<mat-card class="example-card">
-  <mat-card-title-group>
-    <mat-card-title>Bar Chart</mat-card-title>
-  </mat-card-title-group>
-  <mat-card-content>
-    <app-bar-chart></app-bar-chart>
-  </mat-card-content>
-</mat-card>
+<div fxLayout="row" fxLayoutAlign = "space-aroundstart">
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>Bar Chart</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-bar-chart></app-bar-chart>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card class="example-card">
-  <mat-card-title-group>
-    <mat-card-title>Bubble Chart</mat-card-title>
-  </mat-card-title-group>
-  <mat-card-content>
-    <app-bubble-chart></app-bubble-chart>
-  </mat-card-content>
-</mat-card>
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>Bubble Chart</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-bubble-chart></app-bubble-chart>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card class="example-card">
-  <mat-card-title-group>
-    <mat-card-title>Radar Chart</mat-card-title>
-  </mat-card-title-group>
-  <mat-card-content>
-    <app-radar-chart></app-radar-chart>
-  </mat-card-content>
-</mat-card>
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>Radar Chart</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-radar-chart></app-radar-chart>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card class="example-card">
-  <mat-card-title-group>
-    <mat-card-title>Apex Chart</mat-card-title>
-  </mat-card-title-group>
-  <mat-card-content>
-    <app-apex-chart></app-apex-chart>
-  </mat-card-content>
-</mat-card>
+</div>
 
-<mat-card class="example-card">
-  <mat-card-title-group>
-    <mat-card-title>Brush  Chart</mat-card-title>
-  </mat-card-title-group>
-  <mat-card-content>
-    <app-brush-chart></app-brush-chart>
-  </mat-card-content>
-</mat-card>
+<div fxLayout="row" fxLayoutAlign = "space-aroundstart">
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>Apex Chart</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-apex-chart></app-apex-chart>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card class="example-card">
-  <mat-card-title-group>
-    <mat-card-title>Donut Chart</mat-card-title>
-  </mat-card-title-group>
-  <mat-card-content>
-    <app-donut-chart></app-donut-chart>
-  </mat-card-content>
-</mat-card>
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>Brush  Chart</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-brush-chart></app-brush-chart>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card class="example-card">
-  <mat-card-title-group>
-    <mat-card-title>Donut Monochrome Chart</mat-card-title>
-  </mat-card-title-group>
-  <mat-card-content>
-    <app-donut-monochrome></app-donut-monochrome>
-  </mat-card-content>
-</mat-card>
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>Donut Chart</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-donut-chart></app-donut-chart>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card class="example-card">
-  <mat-card-title-group>
-    <mat-card-title>Polar Area Chart</mat-card-title>
-  </mat-card-title-group>
-  <mat-card-content>
-    <app-polar-chart></app-polar-chart>
-  </mat-card-content>
-</mat-card>
+</div>
+
+<div fxLayout="row" fxLayoutAlign = "space-aroundstart">
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>Donut Monochrome Chart</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-donut-monochrome></app-donut-monochrome>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>Polar Area Chart</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-polar-chart></app-polar-chart>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>Multiple Y Axis Chart</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-multi-y></app-multi-y>
+    </mat-card-content>
+  </mat-card>
+</div>
+
+<div fxLayout="row" fxLayoutAlign = "space-aroundstart">
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>Tasks for {{ date1 | date:'medium'}}</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-todo-list></app-todo-list>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+    <mat-card-title-group>
+      <mat-card-title>To Do List for {{ date1 | date:'medium'}}</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-todo02></app-todo02>
+    </mat-card-content>
+  </mat-card>
+
+</div>
+
