--- a/src/app/extrapages/chart01/chart01.component.html
+++ b/src/app/extrapages/chart01/chart01.component.html
@@ -1,5 +1,36 @@
-<div fxLayout="row" fxLayoutAlign = "space-aroundstart">
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+<div fxLayout="row" fxLayoutAlign = "space-aroundstart" fxLayoutGap="20px">
+  <mat-card class="example-card" fxFlex="30" >
+    <mat-card-title-group>
+      <mat-card-title>Tasks for {{ date1 | date:'mediumDate'}}</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-todo-list></app-todo-list>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card" fxFlex="30" >
+    <mat-card-title-group>
+      <mat-card-title>To Do List for {{ date1 | date:'mediumDate'}}</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-todo02></app-todo02>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="example-card" fxFlex="30" >
+    <mat-card-title-group>
+      <mat-card-title>Current Mo. Summary As Of {{ date1 | date:'shortDate'}}</mat-card-title>
+    </mat-card-title-group>
+    <mat-card-content>
+      <app-monthly-summary></app-monthly-summary>
+    </mat-card-content>
+  </mat-card>
+
+</div>
+
+
+<div fxLayout="row" fxLayoutAlign = "space-aroundstart" fxLayoutGap="20px">
+  <mat-card class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Bar Chart</mat-card-title>
     </mat-card-title-group>
@@ -8,7 +39,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+  <mat-card class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Bubble Chart</mat-card-title>
     </mat-card-title-group>
@@ -17,7 +48,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+  <mat-card class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Radar Chart</mat-card-title>
     </mat-card-title-group>
@@ -28,8 +59,8 @@
 
 </div>
 
-<div fxLayout="row" fxLayoutAlign = "space-aroundstart">
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+<div fxLayout="row" fxLayoutAlign = "space-aroundstart" fxLayoutGap="20px" >
+  <mat-card class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Apex Chart</mat-card-title>
     </mat-card-title-group>
@@ -38,7 +69,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+  <mat-card class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Brush  Chart</mat-card-title>
     </mat-card-title-group>
@@ -47,7 +78,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+  <mat-card class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Donut Chart</mat-card-title>
     </mat-card-title-group>
@@ -58,8 +89,8 @@
 
 </div>
 
-<div fxLayout="row" fxLayoutAlign = "space-aroundstart">
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+<div fxLayout="row" fxLayoutAlign = "space-aroundstart" fxLayoutGap="20px">
+  <mat-card class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Donut Monochrome Chart</mat-card-title>
     </mat-card-title-group>
@@ -68,7 +99,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+  <mat-card class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Polar Area Chart</mat-card-title>
     </mat-card-title-group>
@@ -77,7 +108,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
+  <mat-card class="example-card" fxFlex="30" >
     <mat-card-title-group>
       <mat-card-title>Multiple Y Axis Chart</mat-card-title>
     </mat-card-title-group>
@@ -85,26 +116,5 @@
       <app-multi-y></app-multi-y>
     </mat-card-content>
   </mat-card>
-</div>
-
-<div fxLayout="row" fxLayoutAlign = "space-aroundstart">
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
-    <mat-card-title-group>
-      <mat-card-title>Tasks for {{ date1 | date:'medium'}}</mat-card-title>
-    </mat-card-title-group>
-    <mat-card-content>
-      <app-todo-list></app-todo-list>
-    </mat-card-content>
-  </mat-card>
-
-  <mat-card class="example-card" fxFlex="30" fxLayoutGap="20px">
-    <mat-card-title-group>
-      <mat-card-title>To Do List for {{ date1 | date:'medium'}}</mat-card-title>
-    </mat-card-title-group>
-    <mat-card-content>
-      <app-todo02></app-todo02>
-    </mat-card-content>
-  </mat-card>
-
 </div>
 
