--- a/src/app/pages/ocean-export/ocean-export.component.html
+++ b/src/app/pages/ocean-export/ocean-export.component.html
@@ -1,45 +1,18 @@
 <h1 style="font-weight: bolder; background-color: rgb(209, 209, 193); text-align: center;">Ocean Export</h1>
 
 <mat-tab-group mat-align-tabs="start">
+  <mat-tab label="Ocean Export Dashboard">
+    <app-ocean-export-dashboard></app-ocean-export-dashboard>
+  </mat-tab>
+
   <mat-tab label="Ocean Export Grid">
     <app-oe-grid></app-oe-grid>
   </mat-tab>
-  <mat-tab label="First">
-    <mat-card>
-      <mat-card-header>
-        List of Entries
-      </mat-card-header>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Entries Under Exam
-      </mat-card-header>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Entries with PGA Hold
-      </mat-card-header>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Entries Past Arrival Dates
-      </mat-card-header>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Duty Payments Due
-      </mat-card-header>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Liquidated Entries
-      </mat-card-header>
-    </mat-card>
-  </mat-tab>
+
   <mat-tab label="New Ocean Export">
     <app-ocean-export-detail></app-ocean-export-detail>
   </mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
+
 </mat-tab-group>
 
 
