--- a/src/app/pages/sea-ams/ams-detail/ams-detail.component.html
+++ b/src/app/pages/sea-ams/ams-detail/ams-detail.component.html
@@ -266,9 +266,23 @@
         <mat-label>Amend Flag</mat-label>
         <input matInput placeholder="Amend Flag" formControlName="amendFlag">
       </mat-form-field>
+
+      <mat-radio-group
+        aria-labelledby="example-radio-group-label"
+        class="example-radio-group">
+       <mat-radio-button class="example-radio-button" *ngFor="let amend of amends" [value]="amend">
+             {{amend}}
+        </mat-radio-button>
+      </mat-radio-group>
+
       <mat-form-field class="col-md-8" appearance='fill'>
         <mat-label>Amend Reason</mat-label>
-        <input matInput placeholder="Amend Reason" formControlName="reason">
+        <select matNativeControl
+            required placeholder="Amend Reason" formControlName="reason">
+          <option *ngFor="let reas of reasons" [value]="reas">
+              {{ reas }}
+          </option>
+        </select>
       </mat-form-field>
 
     </div>
