--- a/src/app/pages/air-export/air-export.component.html
+++ b/src/app/pages/air-export/air-export.component.html
@@ -1,51 +1,17 @@
 <h1 style="font-weight: bolder; background-color: rgb(43, 255, 0); text-align: center;">Air Export</h1>
 <mat-tab-group mat-align-tabs="start">
+  <mat-tab label="Air Export Dashboard">
+    <app-air-export-dashboard></app-air-export-dashboard>
+  </mat-tab>
+
   <mat-tab label="Air Export Summary">
     <app-export-summary></app-export-summary>
   </mat-tab>
   <mat-tab label="New Air Export">
     <app-air-export-detail></app-air-export-detail>
   </mat-tab>
-  <mat-tab label="Third">
-    <table>
-      <tr>
-        <th>Company</th>
-        <th>Contact</th>
-        <th>Country</th>
-      </tr>
-      <tr>
-        <td>Alfreds Futterkiste</td>
-        <td>Maria Anders</td>
-        <td>Germany</td>
-      </tr>
-      <tr>
-        <td>Centro comercial Moctezuma</td>
-        <td>Francisco Chang</td>
-        <td>Mexico</td>
-      </tr>
-      <tr>
-        <td>Ernst Handel</td>
-        <td>Roland Mendel</td>
-        <td>Austria</td>
-      </tr>
-      <tr>
-        <td>Island Trading</td>
-        <td>Helen Bennett</td>
-        <td>UK</td>
-      </tr>
-      <tr>
-        <td>Laughing Bacchus Winecellars</td>
-        <td>Yoshi Tannamuri</td>
-        <td>Canada</td>
-      </tr>
-      <tr>
-        <td>Magazzini Alimentari Riuniti</td>
-        <td>Giovanni Rovelli</td>
-        <td>Italy</td>
-      </tr>
-    </table>
-    </mat-tab>
+
 </mat-tab-group>
 
 
-<button type="button" class="btn btn-link" routerLink="/nav/">Back to Mainpage</button>
+<button type="button" class="btn btn-link" routerLink="/home/nav/">Back to Mainpage</button>
