--- a/src/app/pages/cmsq/cmsq.component.html
+++ b/src/app/pages/cmsq/cmsq.component.html
@@ -64,4 +64,4 @@
 </mat-tab-group>
 
 
-<button type="button" class="btn btn-link" routerLink="/nav/">Back to Mainpage</button>
+<button type="button" class="btn btn-link" routerLink="/home/nav/">Back to Mainpage</button>
