--- a/src/app/pages/ocean-import/ocean-import.component.html
+++ b/src/app/pages/ocean-import/ocean-import.component.html
@@ -2,46 +2,19 @@
 <h1 style="font-weight: bolder; background-color: rgb(139, 139, 136); text-align: center;">Air Import</h1>
 
 <mat-tab-group mat-align-tabs="start">
+  <mat-tab label="Ocean Import Dashboard">
+    <app-ocean-import-dashboard></app-ocean-import-dashboard>
+  </mat-tab>
+
   <mat-tab label="Ocean Import Grid">
     <app-oi-grid></app-oi-grid>
   </mat-tab>
 
-  <mat-tab label="First">
-    <mat-card>
-      <mat-card-header>
-        List of Entries
-      </mat-card-header>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Entries Under Exam
-      </mat-card-header>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Entries with PGA Hold
-      </mat-card-header>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Entries Past Arrival Dates
-      </mat-card-header>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Duty Payments Due
-      </mat-card-header>
-    </mat-card>
-    <mat-card>
-      <mat-card-header>
-        Liquidated Entries
-      </mat-card-header>
-    </mat-card>
-  </mat-tab>
+
   <mat-tab label="New Ocean Import">
     <app-ocean-import-detail></app-ocean-import-detail>
   </mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
+
 </mat-tab-group>
 
 
