--- a/src/app/pages/sea-ams/ams-detail/ams-detail.component.scss
+++ b/src/app/pages/sea-ams/ams-detail/ams-detail.component.scss
@@ -19,3 +19,14 @@ legend {
 input {
   margin: 5px;
 }
+
+.example-radio-group {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  align-items: flex-start;
+}
+
+.example-radio-button {
+  margin: 5px;
+}
