Updated truck ams component

--- a/src/app/account/auth/login02/login02.component.html
+++ b/src/app/account/auth/login02/login02.component.html
@@ -30,7 +30,8 @@
               <input matInput id="password" type="password" formControlName="password"  placeholder="Password">
             </mat-form-field>
           </mat-card-content>
-          <a routerLink="/home/nav"><button mat-stroked-button color="accent" class="btn-block" >Log in</button> </a>
+          <!-- <a routerLink="/home/nav"><button mat-stroked-button color="accent" class="btn-block" >Log in</button> </a> -->
+          <button mat-stroked-button color="accent" class="btn-block" onclick="onSubmit()">Log in</button>
         </form>
       </mat-card>
 
