--- a/src/app/pages/cmsq/cmsq.component.html
+++ b/src/app/pages/cmsq/cmsq.component.html
@@ -1,4 +1,4 @@
-<h1 style="font-weight: bolder; background-color: rgb(209, 209, 63); text-align: center;">Cargp Manifest Status Query</h1>
+<h1 style="font-weight: bolder; background-color: rgb(209, 209, 63); text-align: center;">Cargo Manifest Status Query</h1>
 
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="CMSQ Queries">
