--- a/src/app/account/auth/login02/login02.component.html
+++ b/src/app/account/auth/login02/login02.component.html
@@ -7,10 +7,9 @@
 
   <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
     <form
-      *ngIf="!isLoggedIn"
       name="form"
-      (ngSubmit)="f.form.valid && onSubmit()"
-      #f="ngForm"
+      (ngSubmit)="onLoginSubmit()"
+      #loginform="ngForm"
       novalidate
     >
       <mat-card class="box">
@@ -18,7 +17,7 @@
           <mat-card-title>Log in ANA Link</mat-card-title>
         </mat-card-header>
 
-        <form class="example-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <form class="example-form" [formGroup]="loginForm" (ngSubmit)="onLoginSubmit()">
           <mat-card-content>
             <mat-form-field class="example-full-width" appearance="fill">
               <mat-label>Username</mat-label>
@@ -31,7 +30,7 @@
             </mat-form-field>
           </mat-card-content>
           <!-- <a routerLink="/home/nav"><button mat-stroked-button color="accent" class="btn-block" >Log in</button> </a> -->
-          <button mat-stroked-button color="accent" class="btn-block" onclick="onSubmit()">Log in</button>
+          <button mat-stroked-button color="accent" class="btn-block" onclick="onLoginSubmit()">Log in</button>
         </form>
       </mat-card>
 
@@ -212,7 +211,4 @@
 
 </div>
 
-  <div class="alert alert-success" *ngIf="isLoggedIn">
-    Logged in!!
-  </div>
   <footer>&copy; Coprighted by ANA Link - 2022</footer>
