--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -37,29 +37,17 @@
       <mat-card-header>
         <mat-card-title>Register</mat-card-title>
       </mat-card-header>
-      <form class="example-form">
-        <mat-card-content>
-          <mat-form-field appearance="fill">
-            <input matInput placeholder="Username">
-          </mat-form-field>
-          <mat-form-field appearance="fill">
-            <input matInput placeholder="Email">
-          </mat-form-field>
-          <mat-form-field appearance="fill">
-            <input matInput placeholder="Password">
-          </mat-form-field>
-          <mat-form-field appearance="fill">
-            <mat-label>Choose a role...</mat-label>
-            <mat-select>
-              <mat-option [value]="roles" *ngFor="let roles of Roles">{{roles}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-card-content>
+      <form (ngSubmit)="onRegisterSubmit()" #registerform="ngForm">
+        <div>
+          <p>Enter a username</p>
+          <input type="text" name="username" ngModel>
+          <p>Enter a password</p>
+          <input type="password" name="password" ngModel>
+        </div>
         <button mat-stroked-button color="accent" class="btn-block">Register</button>
       </form>
     </mat-card>
-  
+
   </aside>
   <footer>
     <!-- Footer -->
