delete sidenav component

--- a/src/app/pages/truck-ams/ams-detail/ams-detail.component.html
+++ b/src/app/pages/truck-ams/ams-detail/ams-detail.component.html
@@ -1,3 +1,5 @@
+<div class="container">
+
 <mat-card fxLayout='row' fxLayoutAlign = 'space-around center' style="background-color:lightblue">
   <mat-card-header>
     <mat-card-title>Truck AMS Transaction No: </mat-card-title>
@@ -290,3 +292,4 @@
 
   <p> Form Value: {{ amsForm.value | json }}</p>
 
+</div>
