--- a/src/app/pages/customs-brokerage/entries-summary/entries-summary.component.html
+++ b/src/app/pages/customs-brokerage/entries-summary/entries-summary.component.html
@@ -20,10 +20,10 @@
     <th scope="row">{{ i + 1 }}</th>
     <td>
       <img [src]="'https://upload.wikimedia.org/wikipedia/commons/' + country.flag" class="mr-2" style="width: 20px">
-      <ngb-highlight [result]="country.name" [term]="filter.value"></ngb-highlight>
+      <ngb-highlight [result]="country.name" ></ngb-highlight>
     </td>
-    <td><ngb-highlight [result]="country.area | number" [term]="filter.value"></ngb-highlight></td>
-    <td><ngb-highlight [result]="country.population | number" [term]="filter.value"></ngb-highlight></td>
+    <td><ngb-highlight [result]="country.area | number" ></ngb-highlight></td>
+    <td><ngb-highlight [result]="country.population | number" ></ngb-highlight></td>
   </tr>
   </tbody>
 </table>
