Updated Angular CLI

--- a/src/app/home/navigation/navigation.component.html
+++ b/src/app/home/navigation/navigation.component.html
@@ -61,7 +61,7 @@
     >
       <a mat-list-item routerLink="{{ menu.route }}">
         <mat-icon>{{ menu.iconName }}</mat-icon>
-        {{ menu.label }}</a
+        {{ menu.displayName }}</a
       >
     </mat-menu-item>
   </mat-sidenav>
