--- a/src/app/pages/tables/country/country.component.html
+++ b/src/app/pages/tables/country/country.component.html
@@ -1,59 +1,62 @@
-<h1 style="font-weight: bolder; background-color: yellow; text-align: center;">Country Tables</h1>
+<h1 style="font-weight: bolder; background-color: yellow; text-align: center">
+  Country Tables
+</h1>
 
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
     <!-- Id Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.id }}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
     </ng-container>
 
-      <!-- Id Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-        <td mat-cell *matCellDef="let row">{{row.id}}</td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let row">{{row.name}}</td>
-      </ng-container>
-      
-      <!-- flag Column -->
-      <ng-container matColumnDef="flag">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Flag</th>
-        <td mat-cell *matCellDef="let row">{{row.flag}}</td>
-      </ng-container>
+    <!-- Id Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+      <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+    </ng-container>
 
-      <!-- Id Column -->
-      <ng-container matColumnDef="area">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Area</th>
-        <td mat-cell *matCellDef="let row">{{row.area}}</td>
-      </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+    </ng-container>
 
-      <!-- Id Column -->
-      <ng-container matColumnDef="population">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Population</th>
-        <td mat-cell *matCellDef="let row">{{row.population}}</td>
-      </ng-container>
+    <!-- flag Column -->
+    <ng-container matColumnDef="flag">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Flag</th>
+      <td mat-cell *matCellDef="let row">{{ row.flag }}</td>
+    </ng-container>
+
+    <!-- Id Column -->
+    <ng-container matColumnDef="area">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Area</th>
+      <td mat-cell *matCellDef="let row">{{ row.area }}</td>
+    </ng-container>
+
+    <!-- Id Column -->
+    <ng-container matColumnDef="population">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Population</th>
+      <td mat-cell *matCellDef="let row">{{ row.population }}</td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <mat-paginator #paginator
-      [length]="dataSource?.data?.length"
-      [pageIndex]="0"
-      [pageSize]="10"
-      [pageSizeOptions]="[5, 10, 20]"
-      aria-label="Select page">
+  <mat-paginator
+    #paginator
+    [length]="dataSource.data.length"
+    [pageIndex]="0"
+    [pageSize]="10"
+    [pageSizeOptions]="[5, 10, 20]"
+    aria-label="Select page"
+  >
   </mat-paginator>
-
 </div>
