modified login component

--- a/src/app/account/auth/login02/login02.component.html
+++ b/src/app/account/auth/login02/login02.component.html
@@ -61,14 +61,14 @@
 </mat-card>
 
 <div fxLayout="row" fxLayoutAlign="space-around center">
-  <mat-card fxFlex="23" class="example-card">
+  <mat-card fxFlex="70%" class="example-card">
     <mat-card-header>
       <mat-card-title> Manufacturers / Shippers </mat-card-title>
     </mat-card-header>
     <mat-card-content
       style="
         background-image: url('https://cdn.pixabay.com/photo/2022/01/16/13/25/cityscape-6942013__340.jpg');
-        background-size: contain;
+        background-size: cover;
       "
     >
       <ul style="font-weight: bolder; color: blanchedalmond">
@@ -92,15 +92,17 @@
       </mat-card-actions>
     </mat-card-content>
   </mat-card>
+</div>
 
-  <mat-card fxFlex="23" class="example-card">
+<div fxLayout="row" fxLayoutAlign="space-around center">
+  <mat-card fxFlex="70%" class="example-card">
     <mat-card-header>
       <mat-card-title> Importers / Exporters </mat-card-title>
     </mat-card-header>
     <mat-card-content
       style="
         background-image: url('https://cdn.pixabay.com/photo/2022/01/10/15/29/wind-mills-6928590__340.jpg');
-        background-size: contain;
+        background-size: cover;
       "
     >
       <ul style="font-weight: bolder; color: chartreuse">
@@ -124,15 +126,17 @@
       </mat-card-actions>
     </mat-card-content>
   </mat-card>
+</div>
 
-  <mat-card fxFlex="23" class="example-card">
+<div fxLayout="row" fxLayoutAlign="space-around center">
+  <mat-card fxFlex="70%" class="example-card">
     <mat-card-header>
       <mat-card-title> Freight Forwarders </mat-card-title>
     </mat-card-header>
     <mat-card-content
       style="
         background-image: url('https://cdn.pixabay.com/photo/2015/01/09/11/08/startup-594090_960_720.jpg');
-        background-size: contain;
+        background-size: cover;
       "
     >
       <ul style="font-weight: bolder; color: darkkhaki">
@@ -156,15 +160,17 @@
       </mat-card-actions>
     </mat-card-content>
   </mat-card>
+</div>
 
-  <mat-card fxFlex="23" class="example-card">
+<div fxLayout="row" fxLayoutAlign="space-around center">
+  <mat-card fxFlex="70%" class="example-card">
     <mat-card-header>
       <mat-card-title> Truckers </mat-card-title>
     </mat-card-header>
     <mat-card-content
       style="
         background-image: url('https://cdn.pixabay.com/photo/2018/05/11/23/45/highway-3392100_960_720.jpg');
-        background-size: contain;
+        background-size: cover;
       "
     >
       <ul style="font-weight: bolder; color: rgb(238, 222, 5)">
@@ -187,14 +193,14 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign="space-around center">
-  <mat-card fxFlex="23" class="example-card">
+  <mat-card fxFlex="70%" class="example-card">
     <mat-card-header>
       <mat-card-title> CFS / Terminal Operators </mat-card-title>
     </mat-card-header>
     <mat-card-content
       style="
         background-image: url('https://cdn.pixabay.com/photo/2018/01/14/15/53/hamburg-3082070_960_720.jpg');
-        background-size: contain;
+        background-size: cover;
       "
     >
       <ul style="font-weight: bolder; color: aliceblue">
@@ -218,15 +224,17 @@
       </mat-card-actions>
     </mat-card-content>
   </mat-card>
+</div>
 
-  <mat-card fxFlex="23" class="example-card">
+<div fxLayout="row" fxLayoutAlign="space-around center">
+  <mat-card fxFlex="70" class="example-card">
     <mat-card-header>
       <mat-card-title> Air Carriers </mat-card-title>
     </mat-card-header>
     <mat-card-content
       style="
         background-image: url('https://cdn.pixabay.com/photo/2015/03/24/09/02/airport-687256_960_720.jpg');
-        background-size: contain;
+        background-size: cover;
       "
     >
       <ul style="font-weight: bolder; color: greenyellow">
@@ -246,15 +254,17 @@
       </mat-card-actions>
     </mat-card-content>
   </mat-card>
+</div>
 
-  <mat-card fxFlex="23" class="example-card">
+<div fxLayout="row" fxLayoutAlign="space-around center">
+  <mat-card fxFlex="70" class="example-card">
     <mat-card-header>
       <mat-card-title> Sea Carriers </mat-card-title>
     </mat-card-header>
     <mat-card-content
       style="
         background-image: url('https://cdn.pixabay.com/photo/2018/01/14/15/53/hamburg-3082070_960_720.jpg');
-        background-size: contain;
+        background-size: cover;
       "
     >
       <ul style="font-weight: bolder; color: magenta">
@@ -278,19 +288,15 @@
       </mat-card-actions>
     </mat-card-content>
   </mat-card>
+</div>
 
-  <mat-card fxFlex="23" class="example-card">
+<div fxLayout="row" fxLayoutAlign="space-around center">
+  <mat-card fxFlex="35" >
     <mat-card-header>
       <mat-card-title> Other Service Providers </mat-card-title>
     </mat-card-header>
-    <mat-card-content
-      style="
-        background-image: url('https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg');
-        background-size: contain;
-      "
-    >
+    <mat-card-content >
       <ul style="font-weight: bolder; color: darkkhaki">
-        Other Service Providers can
         <li>Upload documents</li>
         <li>Download documents</li>
         <li>Generate invoices</li>
@@ -305,6 +311,11 @@
         </a>
       </mat-card-actions>
     </mat-card-content>
+  </mat-card>
+
+  <mat-card fxFlex="35" >
+    
+    <img mat-card-lg-image fxLayoutAlign="stretch" src='https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg' >
   </mat-card>
 </div>
 
