--- a/src/app/account/auth/login02/login02.component.scss
+++ b/src/app/account/auth/login02/login02.component.scss
@@ -107,17 +107,20 @@ body {
   padding: 0.8375em 0;
 }
 
-.example-card {
+.example-card img {
   max-width: 400px;
+  height: auto;
   margin-top: 20px;
 }
+
 
 .wrapper {
   background-image: url('https://cdn.pixabay.com/photo/2022/01/13/16/37/trees-6935614__340.jpg') ;
 }
 
 background-image {
-  background-size: 10%;
+  background-size: auto;
+  background-size: cover;
 }
 
 li {
