--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+// html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 @import "ag-grid-community/dist/styles/ag-grid.css";
 @import "ag-grid-community/dist/styles/ag-theme-alpine.css";
+
+body {
+    margin: 1rem;
+    font-family: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen-Sans,
+      Ubuntu, Cantarell, sans-serif;
+    color: var(--color);
+    background-color: var(--background-color);
+  }
+  
+  .light-theme {
+    --primary: #7dd3fc;
+    --background-color: #fff;
+    --color: #0f172a;
+  }
+  
+  .dimmed-theme {
+    --primary: #e11d48;
+    --background-color: #4b5563;
+    --color: #fff;
+  }
+  
+  .dark-theme {
+    --primary: #059669;
+    --background-color: #0f172a;
+    --color: #f9fafb;
+  }
+  
